--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,15 @@ body {
   box-shadow: 2px 2px #323232 inset, -2px -2px #323232 inset;
   border: 2px solid #323232;
   border-radius: 25px;
+  position: relative;
+}
+
+#screenText {
+  color: #E5E5E5;
+  font-size: 28px;
+  position: absolute;
+  bottom: 0.5em;
+  right: 0.5em;
 }
 
 #buttonContainer {
